# tgba

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  fetch.py  version.py
requirements/: README.md  config.toml  make_requrements.bat  requirements-3.11.txt  requirements-win-py38.txt  requirements-win.txt  requirements.txt
src/: demo.rs  dialog.rs  errors.rs  heading.rs  main.rs  main2.rs  myapp.rs  navbar.rs  panels.rs  resources.rs  status.rs  step.rs  style.rs  utils.rs  winapp.rs
src/index/: environment.rs  link.rs  mod.rs  project.rs  utils.rs
src/pyenv/: README.md  archive.rs  config.rs  download.rs  fonts.rs  installer.rs  link.rs  mod.rs  project.rs  requirements.rs  scriptfixs.rs  utils.rs  venv.rs  winlnk.rs
src/pyenv/index/: environment.rs  link.rs  mod.rs  project.rs  pypi.rs
src/pypip/: dists.rs  mod.rs  project.rs  pyutils.rs  version.rs
src/pypip/pyver/: mod.rs  parse.rs  phases.rs  tests.rs  version.rs
src/steps/: mod.rs  navbar.rs  step1.rs  step2.rs  step3.rs  step31.rs  step4.rs  step5.rs  step6.rs  utils.rs
webpages/: index.html
